fix: update code samples

--- a/docs/tutorials/webiny-cli/adding-custom-commands.mdx
+++ b/docs/tutorials/webiny-cli/adding-custom-commands.mdx
@@ -18,17 +18,16 @@ description: Learn how to add custom commands to the Webiny CLI.
 
 This can be useful if you want to create one or more custom commands for your project, which the developers can use.
 
-## Creating the Command
+## Adding the Command
 
 For this tutorial, we're going to create a new plugin directly in the `webiny.root.js` file, located in your project root folder.
 
 The content of this file might look something like the following:
 
-```js
-// webiny.root.js
+```js title="webiny.project.js"
 module.exports = {
   template: "@webiny/cwp-template-aws@5.0.0",
-  projectName: "homed",
+  name: "my-project",
   cli: {
     plugins: [
       // Webiny CLI commands required from different packages.
@@ -43,11 +42,10 @@ module.exports = {
 
 Notice the plugins required in the `cli.plugins` array. This is where we are going to add our own, for example:
 
-```js
-// webiny.root.js
+```js title="webiny.project.js"
 module.exports = {
   template: "@webiny/cwp-template-aws@5.0.0",
-  projectName: "homed",
+  name: "my-project",
   cli: {
     plugins: [
       // Webiny CLI commands required from different packages.
