fix: replace webiny.root.js to webiny.project.js

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -25,7 +25,7 @@ To learn more about configuring your AWS credentials, please check out the [Conf
 
 Note that, in order to more easily filter out the cloud infrastructure resources deployed by your Webiny project, most of the resources are tagged with the following tags:
 
-- `WbyProjectName` - the name of your project (declared in your `webiny.root.js` file)
+- `WbyProjectName` - the name of your project (declared in your `webiny.project.js` file)
 - `WbyEnvironment` - the environment of which the resource is part of
 
 
