--- a/docs/how-to-guides/development/environment-variables.mdx
+++ b/docs/how-to-guides/development/environment-variables.mdx
@@ -46,7 +46,7 @@ Check out the [Deploy Your Project](/docs/how-to-guides/deployment/deploy-your-p
 Note that, upon executing deployment-related commands, the [Webiny CLI](/docs/key-topics/webiny-cli) automatically injects the following two environment variables into the running process:
 
 - `WEBINY_ENV` - environment that was passed via the `--env` argument
-- `WEBINY_PROJECT_NAME` - the project name, set in your `webiny.root.js` file (`projectRoot`)
+- `WEBINY_PROJECT_NAME` - the project name, set in your `webiny.project.js` file (`projectRoot`)
 
 For example, the `WEBINY_ENV` environment variable is already utilized in the **API** project application, to determine which stack to deploy, [development or production](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/index.ts#L10) one:
 
