--- a/docs/tutorials/webiny-cli/adding-custom-commands.mdx
+++ b/docs/tutorials/webiny-cli/adding-custom-commands.mdx
@@ -20,12 +20,12 @@ This can be useful if you want to create one or more custom commands for your pr
 
 ## Creating the Command
 
-For this tutorial, we're going to create a new plugin directly in the `webiny.root.js` file, located in your project root folder.
+For this tutorial, we're going to create a new plugin directly in the `webiny.project.js` file, located in your project root folder.
 
 The content of this file might look something like the following:
 
 ```js
-// webiny.root.js
+// webiny.project.js
 module.exports = {
   template: "@webiny/cwp-template-aws@5.0.0",
   projectName: "homed",
@@ -44,7 +44,7 @@ module.exports = {
 Notice the plugins required in the `cli.plugins` array. This is where we are going to add our own, for example:
 
 ```js
-// webiny.root.js
+// webiny.project.js
 module.exports = {
   template: "@webiny/cwp-template-aws@5.0.0",
   projectName: "homed",
@@ -100,7 +100,7 @@ yarn webiny drink water
 
 :::info Moving the Code To a Separate File
 
-Inserting new plugins directly into the `webiny.root.js` works, but overtime, may become crowded. Feel free to move this code into a separate file, for example `scripts/drinkCommand.js`, and use the `webiny.root.js` just to call the necessary `require` statements.
+Inserting new plugins directly into the `webiny.project.js` works, but overtime, may become crowded. Feel free to move this code into a separate file, for example `scripts/drinkCommand.js`, and use the `webiny.project.js` just to call the necessary `require` statements.
 :::
 
 :::info
