--- a/docs/tutorials/webiny-cli/adding-custom-commands.mdx
+++ b/docs/tutorials/webiny-cli/adding-custom-commands.mdx
@@ -28,7 +28,7 @@ The content of this file might look something like the following:
 // webiny.project.js
 module.exports = {
   template: "@webiny/cwp-template-aws@5.0.0",
-  projectName: "homed",
+  name: "my-project",
   cli: {
     plugins: [
       // Webiny CLI commands required from different packages.
@@ -47,7 +47,7 @@ Notice the plugins required in the `cli.plugins` array. This is where we are goi
 // webiny.project.js
 module.exports = {
   template: "@webiny/cwp-template-aws@5.0.0",
-  projectName: "homed",
+  name: "my-project",
   cli: {
     plugins: [
       // Webiny CLI commands required from different packages.
