--- a/docs/tutorials/create-an-application/security/graphql-api.mdx
+++ b/docs/tutorials/create-an-application/security/graphql-api.mdx
@@ -192,8 +192,8 @@ To manually test that, we can simply create a new user via the Webiny Security a
 
 Once we've created the user, we can log in into the Webiny Admin Area with it (using its username and password), and execute the same GraphQL query, this time using the built-in API Playground. We will use this client simply because of the fact that, upon issuing GraphQL operations, it will automatically attach the correct `Authorization` request header for us. In other words, it will perform GraphQL operations as the currently logged in user.
 
-:::warning TODO - Create API "Playground short" guide
-Learn more about the API Playground GraphQL client in the API Playground guide.
+:::info
+Learn more about the API Playground GraphQL client in the [API Playground](/docs/how-to-guides/admin-area/api-playground) guide.
 :::
 
 So, as we can see in the following screenshot, the GraphQL query was successful, as we've successfully received the car manufacturer data in the response:
