fix: update code samples

--- a/docs/tutorials/create-an-application/security/graphql-api.mdx
+++ b/docs/tutorials/create-an-application/security/graphql-api.mdx
@@ -88,7 +88,7 @@ const getCarManufacturer = async (
     context: ApplicationContext
 ): Promise<ResolverResponse<CarManufacturer>> => {
     // First, check if the current identity can perform the "getCarManufacturer" query,
-    // within the detected locale. An error is thrown if access is not allowed.
+    // within the detected locale. An error will be thrown if access is not allowed.
     const hasLocaleAccess = await context.i18nContent.hasI18NContentPermission();
     if (!hasLocaleAccess) {
         return new NotAuthorizedResponse();
@@ -99,7 +99,7 @@ const getCarManufacturer = async (
     // will be returned instead, which is equal to: { name: "*"}.
     const permission = await context.security.getPermission<
         CarManufacturersPermission | FullAccessPermission
-        >("car-manufacturers");
+    >("car-manufacturers");
 
     if (!permission) {
         return new NotAuthorizedResponse();
