--- a/docs/tutorials/create-an-application/security/admin-area.mdx
+++ b/docs/tutorials/create-an-application/security/admin-area.mdx
@@ -188,7 +188,7 @@ For example, let's hide the New Car Manufacturer button, for users that aren't a
 
 To do that, let's jump to the `CarManufacturersDataList` React component ([`packages/car-manufacturers/admin-app/src/views/CarManufacturersDataList.tsx`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/security/packages/car-manufacturers/admin-app/src/views/CarManufacturersDataList.tsx)), in which we're going to wrap the `ButtonSecondary` component with the `SecureView` component. The following code shows how we can do that (for brevity, some of the code was excluded):
 
-```tsx title="packages/car-manufacturers/admin-app/src/views/CarManufacturersDataList.tsx" {4,23-45,55-56}
+```tsx title="packages/car-manufacturers/admin-app/src/views/CarManufacturersDataList.tsx" {4,23-47,57-58}
 import React, { useCallback, useEffect, useMemo } from "react";
 (...)
 
@@ -211,9 +211,11 @@ const CarManufacturersDataList: React.FunctionComponent<Props> = ({
             title={t`CarManufacturers`}
             data={data}
             actions={
-                {/* The SecureView component conditionally renders child components
-                (depending on the result of the permissions check we provided) */}
-                <SecureView permission={"car-manufacturers"}>
+                /* The SecureView component conditionally renders child components
+                (depending on the result of the permissions check we provided) */
+                <SecureView<CarManufacturersPermission | FullAccessPermission>
+                    permission={"car-manufacturers"}
+                >
                     {({ permission }) => {
                         if (!permission) {
                             return null;
@@ -312,3 +314,9 @@ To learn more about how to use these in a custom React application, please check
 Furthermore, note that there are still places in the user interface, where we'd most probably want to perform authorization checks, using one of the shown utilities. For example, in the car manufacturers list, we certainly don't want to show the delete entry icon, if the user isn't allowed to perform the delete operation. Make sure to check the [full code example](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area/security/packages/car-manufacturers/admin-app) to see how the rest of the authorization checks were implemented.
 
 Finally, like in the previous [GraphQL API section](/docs/tutorials/create-an-application/security/graphql-api), in case you start seeing yourself copying some of the authorization related code, it's certainly recommended that you extract it into one or more separate utility functions. This way we're not repeating our selves ([DRY](https://en.wikipedia.org/wiki/Don%27t_repeat_yourself)) and our code will be more maintainable and less error-prone.
+
+## FAQ
+
+#### Should I use the `useSecurity` React hook or the shown React components?
+
+Although all three approaches are valid, we recommend the `useSecurity` React hook as your first choice. Utilize React components in scenarios where the hook is not the most appropriate solution or it simply cannot be used.
