--- a/docs/tutorials/create-an-application/security/admin-area.mdx
+++ b/docs/tutorials/create-an-application/security/admin-area.mdx
@@ -313,7 +313,7 @@ To learn more about how to use these in a custom React application, please check
 
 Furthermore, note that there are still places in the user interface, where we'd most probably want to perform authorization checks, using one of the shown utilities. For example, in the car manufacturers list, we certainly don't want to show the delete entry icon, if the user isn't allowed to perform the delete operation. Make sure to check the [full code example](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area/security/packages/car-manufacturers/admin-app) to see how the rest of the authorization checks were implemented.
 
-Finally, like in the previous [GraphQL API section](/docs/tutorials/create-an-application/security/graphql-api), in case you start seeing yourself copying some of the authorization related code, it's certainly recommended that you extract it into one or more separate utility functions. This way we're not repeating our selves ([DRY](https://en.wikipedia.org/wiki/Don%27t_repeat_yourself)) and our code will be more maintainable and less error-prone.
+Finally, like in the previous [GraphQL API section](/docs/tutorials/create-an-application/security/graphql-api), in case you start seeing yourself copying some of the authorization related code, it's certainly recommended that you extract it into one or more separate utility React hooks or components. This way we're not repeating our selves ([DRY](https://en.wikipedia.org/wiki/Don%27t_repeat_yourself)) and our code will be more maintainable and less error-prone.
 
 ## FAQ
 
