--- a/docs/tutorials/create-an-application/security/introduction.mdx
+++ b/docs/tutorials/create-an-application/security/introduction.mdx
@@ -34,7 +34,7 @@ If you want to learn more about the main GraphQL API and how it works on the clo
 :::
 
 :::info
-The code that we will cover in this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area/security).
+The code that we will cover in this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/tree/master/create-an-application/securing-your-application).
 :::
 
 ## Security Permissions
@@ -85,7 +85,7 @@ Ultimately, no matter if we're performing authorization on the API side or in th
 
 By adding a new permissions section in the security group form that we've seen above, we can allow system administrators to manually toggle access for our own custom features, for all identities that are linked with the particular security group.
 
-Continuing with the car manufacturers example that we've used in previous tutorials, we could add a new **Car Manufacturers** section, and offer a couple of different options to the system administrator:
+Continuing with the car manufacturers example that we've used in previous tutorials, we could add a new Car Manufacturers section, and offer a couple of different options to the system administrator:
 
 <CenteredImage alt="Added Security Permissions Group" src={addedSecurityPermissionsGroup} />
 
@@ -188,9 +188,9 @@ export default {
 } as AdminAppPermissionRendererPlugin;
 ```
 
-Feel free to copy and paste the shown code into your project and use it as a starting point. And, after you do that, just make sure that the plugin is actually registered in `apps/admin/code/src/plugins/index.ts`, otherwise no change will appear in your browser.
+Feel free to copy and paste the shown code into your project and use it as a starting point. And, after you do that, just make sure that the plugin is actually registered in [`apps/admin/code/src/plugins/index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/apps/admin/code/src/plugins/index.ts), otherwise no change will appear in your browser.
 
-If you've been following the previous two tutorials, then you can simply import it via the `packages/car-manufacturers/admin-app/src/index.ts` file:
+If you've been following the previous two tutorials, then you can simply import it via the [`packages/car-manufacturers/admin-app/src/index.ts`](https://github.com/webiny/webiny-examples/blob/master/create-an-application/securing-your-application/code/packages/car-manufacturers/admin-app/src/index.ts) file:
 
 ```ts title="packages/car-manufacturers/admin-app/src/index.ts" {4,6}
 import { Plugin } from "@webiny/plugins/types";
@@ -201,9 +201,9 @@ import permissions from "./permissions";
 export default (): Plugin[] => [menus(), routes(), permissions];
 ```
 
-By completing this step, we've added the new **Car Manufacturers** permissions section in the security group form. System administrators can now create new (or extend existing) security groups, and give access to our new Car Manufacturers module. For example, one security group can allow only reading car manufacturers data, while the other one may allow all three primary actions - read, write, and delete, and even allow access to the imaginary special feature.
+By completing this step, we've added the new Car Manufacturers permissions section in the security group form. System administrators can now create new (or extend existing) security groups, and give access to our new Car Manufacturers module. For example, one security group can allow only reading car manufacturers data, while the other one may allow all three primary actions - read, write, and delete, and even allow access to the imaginary special feature.
 
-Now that we have this new security permissions section, let's create the new **Car Manufacturers** security group, that enables full access to our new Car Manufacturers module. We'll need this security group in order to perform some manual testing down the road.
+Now that we have this new security permissions section, let's create the new Car Manufacturers security group, that enables full access to our new Car Manufacturers module. We'll need this security group in order to perform some manual testing down the road.
 
 <CenteredImage alt="New Car Manufacturers Security Group" src={newSecurityGroup} />
 
