--- a/docs/how-to-guides/integrate-tailwindcss.mdx
+++ b/docs/how-to-guides/integrate-tailwindcss.mdx
@@ -14,7 +14,7 @@ description: Learn how to integrate tailwindcss in your Webiny project.
 ## Overview
 
 [Tailwind CSS](https://tailwindcss.com/) is a popular utility-first CSS framework.
-One of the most frequently asked question is **how to add tailwindcss in Webiny project?** in this guide we'll answer exactly that.
+One of the most frequently asked questions is **how to add tailwindcss in Webiny project?** in this guide, we'll answer exactly that.
 So without further ado let's start.
 
 :::info
@@ -45,8 +45,8 @@ We need to add the `tailwindcss` to the `postcss` plugins inside the webpack con
 Let's see how to do that. In this guide, we integrate `tailwindcss` to the **Website** `(apps/website)` application.
 But, you can use the same approach for other Webiny applications or a custom application for that matter. 
 
-Every Webiny application has a `webiny.config.js` file which exports the commands for processing the application.
-In case of **Website**`(apps/website)` it contains following commands:
+Every Webiny application has a `webiny.config.js` file that exports the commands for processing the application.
+In the case of **Website**`(apps/website)` it contains the following commands:
 - `start` to start the application
 - `build` to build the application
 
@@ -71,7 +71,7 @@ module.exports = {
     }
 };
 ```
-As you can see in the above file, we exports an object with `commands.start` and `commands.build` functions.
+As you can see in the above file, we export an object with `commands.start` and `commands.build` functions.
 
 We use `startApp` and `buildApp` helper functions that we imported from `"@webiny/project-utils"` in `commands.start` and `commands.build` respectively.
 
@@ -149,14 +149,14 @@ module.exports = config => {
 };
 ```
 
-Here we `exports` a helper function that modify webpack configuration.
+Here we export a helper function that modifies webpack configuration.
 It takes `config` as the single argument and returns the new configuration after making some modifications to it.
 
-Inside that function we use `traverseLoaders` helper function that we `require` from `"@webiny/project-utils"` package.
-It traverse all the loaders defined in `modules.rules` property of the webpack configuration.
-And then for every loader that include `"postcss-loader"` we add `tailwindcss` as PostCSS plugin.
+Inside that function, we use `traverseLoaders` helper function that we `require` from `"@webiny/project-utils"` package.
+It traverses all the loaders defined in `modules.rules` property of the webpack configuration.
+And then for every loader that includes `"postcss-loader"` we add `tailwindcss` as PostCSS plugin.
 
-Now that we have add `tailwindcss` to webpack configuration. Let's move on the next step.
+Now that we have add `tailwindcss` to webpack configuration. Let's move on to the next step.
 
 ### Create Your Tailwindcss Configuration File
 Next, generate your `tailwind.config.js` file. From the root of your project run the following command:
@@ -166,7 +166,7 @@ tailwindcss init
 ```
 
 :::note
-We have created the `tailwind.config.js` file in the root of Webiny project because this way we can share it across all Webiny applications,
+We have created the `tailwind.config.js` file in the root of Webiny project so that we can share it across all Webiny applications,
 for example, `(apps/admin)` and `(apps/website)`.
 :::
 
@@ -201,7 +201,7 @@ module.exports = require("../../../tailwind.config");
 Now it's time to include the tailwind directives in your styles.
 As most of the styles for Webiny applications are present in `(apps/theme)`, we will include tailwind there.
 
-Open the `apps/theme/styles.scss` file that exports all theme styles and use the `@tailwind` directive to include Tailwind's `base`, `components`, and `utilities` styles as show below:
+Open the `apps/theme/styles.scss` file that exports all theme styles and use the `@tailwind` directive to include Tailwind's `base`, `components`, and `utilities` styles as shown below:
 
 ```scss title="apps/theme/styles.scss"
 @tailwind base;
