fix: use default image rendering method

--- a/docs/how-to-guides/admin-area/api-playground.mdx
+++ b/docs/how-to-guides/admin-area/api-playground.mdx
@@ -23,16 +23,7 @@ This may be handy in a couple of different scenarios, like for example when in n
 
 To access it, simply open the main menu and click on the **API Playground** menu item, located in the bottom section:
 
-<!-- vale off -->
-
-<img
-  src={require("./api-playground/api_playground_from_main_menu.png").default}
-  className="no-shadow"
-  title="Access API Playground via Main Menu"
-  alt="Access API Playground via Main Menu"
-/>
-
-<!-- vale on -->
+![Accessing API Playground](./api-playground/api_playground_from_main_menu.png)
 
 ## Default GraphQL APIs
 
