--- a/docs/key-topics/ci-cd.mdx
+++ b/docs/key-topics/ci-cd.mdx
@@ -17,9 +17,9 @@ This article contains a more general information on what CI/CD is and its main p
 
 ## What is CI/CD?
 
-**Continuous Integration (CI)** is a development practice where developers integrate code into a shared repository frequently, preferably several times a day. Each integration can then be verified by an automated build and automated tests. While automated testing is not strictly part of CI it is typically implied.
+**Continuous Integration (CI)** is a software application development practice where developers integrate code into a shared repository frequently, preferably several times a day. Each integration can then be verified by an automated build and automated tests. While automated testing is not strictly part of CI it is typically implied.
 
-**Continuous deployment (CD)** is a software development practice where code changes are automatically prepared for a release to production.
+**Continuous deployment (CD)** is a software application development practice where code changes are automatically prepared for a release to production.
 
 Note that the **CD** abbreviation can also stand for **continuous delivery**, which also entails continuous deployment of your project, only in a [more manual fashion](https://en.wikipedia.org/wiki/Continuous_delivery):
 
