feat: update tailwindcss guide

--- a/docs/how-to-guides/integrate-tailwindcss.mdx
+++ b/docs/how-to-guides/integrate-tailwindcss.mdx
@@ -14,8 +14,8 @@ description: Learn how to integrate tailwindcss in your Webiny project.
 ## Overview
 
 [Tailwind CSS](https://tailwindcss.com/) is a popular utility-first CSS framework.
-One of the most frequently asked questions is **how to add tailwindcss in Webiny project?** in this guide, we'll answer exactly that.
-So without further ado let's start.
+So, naturally, one of the most frequently asked questions by the community is **how to add tailwindcss in Webiny project?**
+And, in this guide, we'll answer exactly that. So without further ado let's start.
 
 :::info
 The code that we will cover in this guide can also be found in our GitHub [examples repository](#).
@@ -43,7 +43,7 @@ Webiny currently uses [Webpack 4](https://v4.webpack.js.org/) which doesn't supp
 
 We need to add the `tailwindcss` to the `postcss` plugins inside the webpack configuration of the application.
 Let's see how to do that. In this guide, we integrate `tailwindcss` to the **Website** `(apps/website)` application.
-But, you can use the same approach for other Webiny applications or a custom application for that matter. 
+But, you can use the same approach for other Webiny applications or a custom application for that matter.
 
 Every Webiny application has a `webiny.config.js` file that exports the commands for processing the application.
 In the case of **Website**`(apps/website)` it contains the following commands:
@@ -75,7 +75,7 @@ As you can see in the above file, we export an object with `commands.start` and 
 
 We use `startApp` and `buildApp` helper functions that we imported from `"@webiny/project-utils"` in `commands.start` and `commands.build` respectively.
 
-Both, `startApp` and `buildApp` function, takes two arguments: `options` and `context`. 
+Both, `startApp` and `buildApp` function, takes two arguments: `options` and `context`.
 
 You can pass a function named `webpack` to this `options` object. It receives `config` as the single argument and should return the new config for webpack.
 We will make use of this function to add `tailwindcss` support in our webpack configuration.
@@ -199,7 +199,7 @@ module.exports = require("../../../tailwind.config");
 
 ### Include Tailwind in Your SCSS
 Now it's time to include the tailwind directives in your styles.
-As most of the styles for Webiny applications are present in `(apps/theme)`, we will include tailwind there.
+As most of the styles for Webiny applications are present in `(apps/theme)`, we also include tailwind styles there.
 
 Open the `apps/theme/styles.scss` file that exports all theme styles and use the `@tailwind` directive to include Tailwind's `base`, `components`, and `utilities` styles as shown below:
 
@@ -226,4 +226,78 @@ yarn build --env=<YOUR_ENV>
 ```
 Tailwind CSS is ready to use in your Webiny project.
 
-<!-- TODO: Add a example section with image below. -->
+### Use Tailwind in Website
+
+Now, you're all set to use the tailwind CSS in your **Website** `(apps/website)`, let's try adding an example section made with tailwindcss as shown below:
+
+```tsx title="apps/website/code/src/ExampleMadeWithTailwindCSS.tsx"
+import React from "react";
+
+const ExampleMadeWithTailiwindCSS = () => {
+    return (
+        <div className="mt-12 -mb-12 bg-gray-50">
+            <div className="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
+                <h2 className="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+                    <span className="block">Ready to dive in?</span>
+                    <span className="block text-purple-600">Start your free trial today.</span>
+                </h2>
+                <div className="mt-8 flex lg:mt-0 lg:flex-shrink-0">
+                    <div className="inline-flex rounded-md shadow">
+                        <a
+                            href="#"
+                            className="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-purple-600 hover:bg-purple-700"
+                        >
+                            Get started
+                        </a>
+                    </div>
+                    <div className="ml-3 inline-flex rounded-md shadow">
+                        <a
+                            href="#"
+                            className="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-purple-600 bg-white hover:bg-indigo-50"
+                        >
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    )
+}
+
+export default ExampleMadeWithTailiwindCSS;
+```
+For demonstration purpose let's add this example component to the `App.tsx` file as shown below:
+
+```tsx title="apps/website/code/src/App.tsx" {3,9}
+import React from "react";
+(...)
+import ExampleMadeWithTailiwindCSS from "./ExampleMadeWithTailwindCSS";
+
+export const App = () => (
+    <ApolloProvider client={createApolloClient()}>
+        <BrowserRouter basename={process.env.PUBLIC_URL}>
+            <PageBuilderProvider>
+                <ExampleMadeWithTailiwindCSS />
+                <Switch>
+                    <Route path={"*"} component={Page} />
+                </Switch>
+            </PageBuilderProvider>
+        </BrowserRouter>
+    </ApolloProvider>
+);
+
+```
+
+And, this is how it looks in the browser:
+
+<!-- vale off -->
+
+<img
+  src={require("./assets/integrate-tailwindcss/tailwind-css-demo-website.png").default}
+  style={{ marginBottom: 20 }}
+  alt="Website demo using tailwindcss"
+/>
+
+<!-- vale on -->
+
+
