fix: wrap environments / VCS guides

--- a/docs/how-to-guides/development/workflows/environments.mdx
+++ b/docs/how-to-guides/development/workflows/environments.mdx
@@ -43,7 +43,7 @@ Read more about the cloud infrastructure resources that get deployed into your A
 
 ## Shared and Isolated Environments
 
-There are two types of environments that we usually deploy: **shared** and **isolated**.
+There are two types of environments into which we usually deploy to: **shared** and **isolated**.
 
 **Shared environments** are environments that are shared among:
 
@@ -53,6 +53,12 @@ There are two types of environments that we usually deploy: **shared** and **iso
 In terms of naming these environments, a strict rule does not exist, but some of the typical environment names for these environments are usually `dev`, `staging`, and `prod` (`production`). These are always deployed from a CI/CD environment.
 
 On the other hand, **isolated environments** are environments that are deployed by developers, for their own development and testing needs. These are usually deployed and destroyed from a developer's machine.
+
+:::info
+Within an organization, it's common practice for developers to have their own cloud (AWS) account, which they use to deploy their isolated environments. This way we ensure that they don't impact one of the (sensitive) shared environments and enable them to perform experiments more freely.
+
+Read more about how to organize cloud accounts in the [CI/CD](#) section.
+:::
 
 ### Long-lived and Short-lived Environments
 
@@ -91,7 +97,7 @@ New fixes and features are first deployed into this environment, might be unstab
 
 #### `staging`
 
-For testing new release candidates in a production-like environment. This environment has to reach a state that can be considered as stable, before deploying to **production**
+For testing new release candidates in a production-like environment. This environment has to reach a state that can be considered as stable, before deploying application changes to **production**.
 
 #### `production`
 
