--- a/docs/how-to-guides/development/workflows/introduction.mdx
+++ b/docs/how-to-guides/development/workflows/introduction.mdx
@@ -12,14 +12,17 @@ description: Introduction to CI/CD how-to guides section.
 
 ## Overview
 
-The process of application development is much more than just writing code. It entails several different subprocesses, which are equally, if not more, important. For example:
+The process of (serverless) application development is much more than just writing application code. It entails several different subprocesses, which are equally, if not more, important. For example:
 
-- testing application code
-- organizing VCS branches
+- testing
 - deployment into multiple environments
-- application and cloud infrastructure security
+- organizing code in multiple VCS branches
+- choosing the right cloud infrastructure resources for the job
+- CI/CD
+- storing and managing cloud infrastructure state files
+- security
 - monitoring and observability <!-- (https://thenewstack.io/monitoring-vs-observability-whats-the-difference/) -->
 - team organization
 - and more
 
-In this following sections, we cover some of these subprocesses and provide best practices around how to implement them.
+In the following sections, we cover some of these subprocesses and provide best practices around how to structure and implement them.
