--- a/docs/how-to-guides/development/serverless-applications/introduction.mdx
+++ b/docs/how-to-guides/development/serverless-applications/introduction.mdx
@@ -1,7 +1,7 @@
 ---
-id: developing-serverless-applications
-title: Developing Serverless Applications
-sidebar_label: Developing Serverless Applications
+id: introduction
+title: Introduction
+sidebar_label: Introduction
 keywords: ["webiny", "development", "unit", "e2e", "tests"]
 description: Learn how to establish a CI/CD pipeline for your Webiny project.
 ---
