--- a/docs/how-to-guides/development/workflows/version-control.mdx
+++ b/docs/how-to-guides/development/workflows/version-control.mdx
@@ -7,18 +7,21 @@ description: Learn about the most commonly used branching strategy that you can 
 ---
 
 :::tip What you'll learn
-
 - how to organize your Git repository
 :::
 
 ## Overview
 
-Project development is always backed by a [version control system (VCS)](https://en.wikipedia.org/wiki/Version_control).
+In today's world, project development is always backed by a [version control system (VCS)](https://en.wikipedia.org/wiki/Version_control).
 
-In this guide, we cover the approaches we recommend to be used with [GitHub](https://en.wikipedia.org/wiki/GitHub) as your VCS, as it is, from our experience, the most used system out there.
+In this guide, we cover the approaches we recommend to be used with [GitHub](https://en.wikipedia.org/wiki/GitHub) as the VCS of choice, as it is, from our experience, the most used system out there.
 
 :::info
 [GitHub](https://en.wikipedia.org/wiki/GitHub) is a provider of Internet hosting for software development and version control using [Git](https://www.git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F). It offers the distributed version control and source code management functionality of Git, plus its own features.
+:::
+
+:::tip
+Want us to cover an integration with a different type of VCS? [Let us know](https://www.webiny.com/slack)!
 :::
 
 ## GitHub Flow
@@ -27,15 +30,15 @@ When working with GitHub, there are a couple of different workflows that you can
 
 > GitHub flow is a lightweight, branch-based workflow that supports teams and projects where deployments are made regularly.
 
-Essentially, developers first create a branch from one of the long-lived development base branches, in which they perform necessary code changes. Once ready, a pull request (PR) is created, which initiates the review process made by other team members. If all code changes are in order, the pull request is accepted, or in other words, the changes are merged back into the base branch.
+Essentially, developers first create a branch from one of the long-lived development base branches, in which they perform necessary code changes. Once ready, a pull request (PR) is created, which initiates the review process made by other team members and in almost all cases triggers different application tests. If all code changes are in order, the pull request is accepted, or in other words, the changes are merged back into the base branch.
 
 ## Organizing Branches
 
-Besides adopting the GitHub flow explained above, another element to consider is the organization of your project's Git branches. Similarly to how we've defined [shared and isolated environments](#) we can deploy into, your repository should also consist of shared and isolated branches that, in a way, mirror these environments.
+Besides adopting the GitHub flow explained above, another element to consider is the organization of your project's Git branches. Similarly to how we've defined [shared and isolated environments](/docs/how-to-guides/development/workflows/environments) we can deploy into, your repository should also consist of shared and isolated branches that, in a way, mirror these environments.
 
 #### Shared branches
 
-You might want to have a couple of **shared** and long-lived branches that represent your shared environments, like `dev`, `staging`, and `prod` (`production`). As with the environments, no strict naming rules exist, but these names are definitely something most developers will recognize. We recommend having these three as the minimum and, of course, if more are needed, you're free to do so.
+For your project, you might want to have a couple of **shared** and long-lived branches that represent your shared environments, like `dev`, `staging`, and `prod` (`production`). As with the environments, no strict naming rules exist, but these names are definitely something most developers will recognize. We recommend having these three as the minimum and, of course, if more are needed, you're free to do so.
 
 These branches should be made [protected](https://docs.github.com/en/github/administering-a-repository/about-protected-branches) and direct code pushes into these should be disabled. Not only direct pushes break the GitHub flow and merging strategies we're about to explain in the next section, in almost all cases, this triggers different deployment processes defined in your CI/CD workflows.
 
