fix: correct links

--- a/docs/how-to-guides/development/workflows/introduction.mdx
+++ b/docs/how-to-guides/development/workflows/introduction.mdx
@@ -2,17 +2,16 @@
 id: introduction
 title: Introduction
 sidebar_label: Introduction
-keywords: ["webiny", "ci", "cd", "development", "workflows", "introduction"]
-description: Introduction to CI/CD how-to guides section.
+keywords: ["development", "workflows", "introduction", "ci", "cd", "serverless", "cloud", "infrastructure"]
+description: Introduction to development workflows guides section.
 ---
 :::tip What you'll learn
-- what does it mean to develop serverless
-- two
+- what are the most common pieces of which the application development process consists of
 :::
 
 ## Overview
 
-The process of (serverless) application development is much more than just writing application code. It entails several different subprocesses, which are equally, if not more, important. For example:
+The process of application development is much more than just writing application code. It entails several different subprocesses, which are equally, if not more, important. For example:
 
 - testing
 - deployment into multiple environments
