fix: correct links

--- a/docs/how-to-guides/development/workflows/environments.mdx
+++ b/docs/how-to-guides/development/workflows/environments.mdx
@@ -2,7 +2,7 @@
 id: environments
 title: Managing Environments
 sidebar_label: Environments
-keywords: ["webiny", "project", "deployment", "environments"]
+keywords: ["development", "workflows", "deployment", "environments"]
 description: Learn how to organize different deployment environments for your project
 ---
 
