--- a/docs/how-to-guides/development/workflows/version-control.mdx
+++ b/docs/how-to-guides/development/workflows/version-control.mdx
@@ -2,7 +2,7 @@
 id: version-control
 title: Version Control
 sidebar_label: Version Control
-keywords: ["webiny", "project", "version control", "git", "repository", "branching", "pull request"]
+keywords: ["development", "workflows", "version control", "git", "repository", "branching", "pull request"]
 description: Learn about the most commonly used branching strategy that you can adopt for your project.
 ---
 
