fix: use bash as code snippet type

--- a/docs/key-topics/deployment/iac-with-pulumi.mdx
+++ b/docs/key-topics/deployment/iac-with-pulumi.mdx
@@ -37,7 +37,7 @@ Note that Pulumi is the _default_ solution Webiny relies on, which means it does
 In the following folder structure, we are looking at three applications that are set up by default in a new Webiny project. These are the **API** (`./api`), **Admin Area** (`./apps/admin`), and **Website** (`./apps/website`), which are shown in the following directory structure (`code` folder omitted for brevity):
 <!-- vale on -->
 
-```
+```bash
 .
 ├── api
 │   ├── pulumi
