fix: use text as code snippet type

--- a/docs/key-topics/deployment/iac-with-pulumi.mdx
+++ b/docs/key-topics/deployment/iac-with-pulumi.mdx
@@ -37,7 +37,7 @@ Note that Pulumi is the _default_ solution Webiny relies on, which means it does
 In the following folder structure, we are looking at three applications that are set up by default in a new Webiny project. These are the **API** (`./api`), **Admin Area** (`./apps/admin`), and **Website** (`./apps/website`), which are shown in the following directory structure (`code` folder omitted for brevity):
 <!-- vale on -->
 
-```bash
+```text
 .
 ├── api
 │   ├── pulumi
@@ -120,7 +120,7 @@ Except for the files we mentioned in the previous section, there is also one oth
 
 These files describe at what state your cloud infrastructure is currently at. For example, it contains a list of all deployed resources, various metadata, configuration, and so on. State files are stored per Pulumi program stack, and by default, they are stored in the `.pulumi` folder, located in your project root.
 
-```bash title=".pulumi (folder located in your project root)"
+```text title=".pulumi (folder located in your project root)"
 .
 ├── api
 │   ├── .pulumi
