--- a/docs/how-to-guides/development/workflows/version-control.mdx
+++ b/docs/how-to-guides/development/workflows/version-control.mdx
@@ -32,6 +32,17 @@ When working with GitHub, there are a couple of different workflows that you can
 
 Essentially, developers first create a branch from one of the long-lived development base branches, in which they perform necessary code changes. Once ready, a pull request (PR) is created, which initiates the review process made by other team members and in almost all cases triggers different application tests. If all code changes are in order, the pull request is accepted, or in other words, the changes are merged back into the base branch.
 
+<!-- vale off -->
+
+<img
+  src={require("./assets/github_flow.png").default}
+  className="no-shadow"
+  style={{ marginBottom: 20 }}
+  alt="Environments."
+/>
+
+<!-- vale on -->
+
 ## Organizing Branches
 
 Besides adopting the GitHub flow explained above, another element to consider is the organization of your project's Git branches. Similarly to how we've defined [shared and isolated environments](/docs/how-to-guides/development/workflows/environments) we can deploy into, your repository should also consist of shared and isolated branches that, in a way, mirror these environments.
