fix: remove unnecessary word

--- a/docs/how-to-guides/development/workflows/version-control.mdx
+++ b/docs/how-to-guides/development/workflows/version-control.mdx
@@ -21,7 +21,7 @@ In this guide, we cover the approaches we recommend to be used with [GitHub](htt
 :::
 
 :::tip
-Want us to cover an integration with a different type of VCS? [Let us know](https://www.webiny.com/slack)!
+Want us to cover an integration with a different of VCS? [Let us know](https://www.webiny.com/slack)!
 :::
 
 ## GitHub Flow
