fix grammar mistakes

--- a/docs/how-to-guides/integrate-tailwindcss.mdx
+++ b/docs/how-to-guides/integrate-tailwindcss.mdx
@@ -31,7 +31,7 @@ We recommend reading our [install Webiny](/docs/tutorials/install-webiny) tutori
 ## Setting Up Tailwind CSS
 
 ### Install Tailwind via Yarn
-Install Tailwind and its peer-dependencies using yarn:
+Install Tailwind and its peer-dependencies using yarn by running the following command from root of your project:
 
 ```
 yarn add -D tailwindcss@npm:@tailwindcss/postcss7-compat^2.1.2 postcss@^7 autoprefixer@^9
@@ -42,7 +42,7 @@ Webiny currently uses [Webpack 4](https://v4.webpack.js.org/) which doesn't supp
 ### Add Tailwindcss to Webpack Configuration
 
 We need to add the `tailwindcss` to the `postcss` plugins inside the webpack configuration of the application.
-Let's see how to do that. In this guide, we integrate `tailwindcss` to the **Website** `(apps/website)` application.
+In this guide, we integrate `tailwindcss` in the **Website** `(apps/website)` application.
 But, you can use the same approach for other Webiny applications or a custom application for that matter.
 
 Every Webiny application has a `webiny.config.js` file that exports the commands for processing the application.
@@ -117,7 +117,7 @@ module.exports = {
 };
 ```
 
-As you can see from the code example above. We use `options.webpack` to apply tailwindcss to webpack in both `startApp` and `buildApp`.
+We use `options.webpack` to apply tailwindcss to webpack in both `startApp` and `buildApp`.
 
 :::info
 We made this change in both `startApp` and `buildApp` so that we can use `tailwindcss` in both local development and deployed application.
@@ -153,10 +153,10 @@ Here we export a helper function that modifies webpack configuration.
 It takes `config` as the single argument and returns the new configuration after making some modifications to it.
 
 Inside that function, we use `traverseLoaders` helper function that we `require` from `"@webiny/project-utils"` package.
-It traverses all the loaders defined in `modules.rules` property of the webpack configuration.
-And then for every loader that includes `"postcss-loader"` we add `tailwindcss` as PostCSS plugin.
+It traverses all the loaders defined in `modules.rules` property of the webpack configuration and passes each one of them to your callback.
+You can then apply your modifications. In our case, we add tailwind plugins to the `postcss-loader`.
 
-Now that we have add `tailwindcss` to webpack configuration. Let's move on to the next step.
+Now that we have added `tailwindcss` to webpack configuration, let's move on to the next step.
 
 ### Create Your Tailwindcss Configuration File
 Next, generate your `tailwind.config.js` file. From the root of your project run the following command:
@@ -213,7 +213,7 @@ Open the `apps/theme/styles.scss` file that exports all theme styles and use the
 Tailwind will swap these directives out at build-time with all of the styles it generates based on your configured design system.
 
 
-That's all! Now when you start your **Website** `(apps/website)` application locally by running
+That's all! Now, when you start your **Website** `(apps/website)` application locally, by running:
 
 ```
 yarn start --env=local
@@ -266,7 +266,7 @@ const ExampleMadeWithTailiwindCSS = () => {
 
 export default ExampleMadeWithTailiwindCSS;
 ```
-For demonstration purpose let's add this example component to the `App.tsx` file as shown below:
+For demonstration purpose, let's add this example component to the `App.tsx` file as shown below:
 
 ```tsx title="apps/website/code/src/App.tsx" {3,9}
 import React from "react";
