feat: add code example repo link

--- a/docs/how-to-guides/integrate-tailwindcss.mdx
+++ b/docs/how-to-guides/integrate-tailwindcss.mdx
@@ -18,7 +18,7 @@ So, naturally, one of the most frequently asked questions by the community is **
 And, in this guide, we'll answer exactly that. So without further ado let's start.
 
 :::info
-The code that we will cover in this guide can also be found in our GitHub [examples repository](#).
+The code that we will cover in this guide can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/integrate-tailwind-css).
 :::
 
 ## Prerequisites
